Use distro.openshift (#1073)
