# apis/installer/v1alpha1/ace_platform_api.go
@@ -19,6 +19,7 @@ package v1alpha1
 import (
 	core "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"kmodules.xyz/resource-metadata/apis/shared"
 )
 
 const (
@@ -99,6 +100,8 @@ type PlatformApiSpec struct {
 	// +listType=map
 	// +listMapKey=name
 	Env []core.EnvVar `json:"env"`
+	// +optional
+	Distro shared.DistroSpec `json:"distro"`
 }
 
 type AceAPISettings struct {
