# charts/dns-proxy/values.openapiv3_schema.yaml
@@ -459,6 +459,20 @@ properties:
     - maxReplicas
     - minReplicas
     type: object
+  distro:
+    properties:
+      openshift:
+        type: boolean
+      ubi:
+        enum:
+        - all
+        - catalog
+        - operator
+        type: string
+    required:
+    - openshift
+    - ubi
+    type: object
   envVars:
     additionalProperties:
       type: string
